# lang

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.cpp
docs/: design.md  language.md  vm.md
examples/: all.drop  eg_1.dbc  eg_1.drop  eg_11.dbc  eg_11.drop  eg_12.dbc  eg_12.drop  eg_13.drop  eg_14.drop  eg_15.dbc  eg_15.drop  eg_16.dbc  eg_16.drop  eg_17.drop  eg_2.drop  eg_3.drop  eg_4.drop  eg_5.drop  eg_6.dbc  eg_6.drop  eg_7.drop  eg_8.drop  eg_9.drop  hello_world.let  test.drop
examples/ffi/: eg_1.dbc  eg_1.drop  mathlib.c
examples/modules/: main.drop
examples/modules/lib/geometry/: shapes.drop
examples/modules/lib/math/: basic.drop
scripts/: disassembler.py  omap.json  version.bat
src/compiler/: AST.cpp  AST.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Expr.h  Lexer.cpp  Lexer.h  ModuleLoader.cpp  Parser.cpp  Parser.h  Semantic.cpp  Semantic.h  Stmt.h  TypeChecker.cpp  TypeChecker.h
src/debugger/: Debugger.cpp  Debugger.h
src/native/: AndroidNative.cpp  AndroidNative.h  Internet.cpp  Internet.h  Native.cpp  Native.h  NativeRegisteries.h
src/tests/: LexerTest.h  VM_test.h
src/vm/: Allocator.cpp  Allocator.h  DBC_helper.cpp  DBC_helper.h  FFI.cpp  FFI.h  FFIHelper.cpp  FFIHelper.h  GC.h  Loader.cpp  Object.h  StackManager.cpp  VM.cpp  VM.h  Value.cpp  Value.h  defines.h
